# theImperialArena

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: arena.c.4C615B79BEA82255.idx  arena.h.E252FF451DF9E5FB.idx
include/: arena.h
src/: arena.c  main.c
